refactor the genetic search algorithm